    - The MojangAPI is apparently sending the incorrect response for many accounts which have not really been deleted.
  - New Towny Top Command, courtesy of Glare with PR #4605.
    - Reactivates the long-removed /towny top balance using the new cached bank balances.
  - Implemented configurable towny top size output, courtesy of Glare with PR #4614.
  - New Config Option: plugin.towny_top_size
    - default: 10
    - Sets the default size that /towny top commands display.
0.96.5.8:
  - Add (Public) to Town status screen upper bar.
  - Add (Conquered) to Town status screen upper bar.
  - API: Added TownyLoadedDatabaseEvent.
    - Called when has successfully loaded the database on startup as well as /ta database load and /ta reload db|all.
  - Add Nation#getMutualAllies() and Nation#hasMutualAlly() from SiegeWar.
  - API: add king and mayor UUIDs to the DeleteNationEvent & DeleteTownEvent.
  - Add some Time methods from SiegeWar.
  - Format for colour codes when retrieving TownyEconomyHandler#getFormattedBalance().
    - Closes #4619.
  - Fix for NPE which could be thrown via the PlayerInteractEvent when an item was used without clicking a block.
  - Fix /plot group toggle explosion showing the feedback message for fire.
  - API: Add NationTownLeaveEvent.
  - API Change: NationPreTownKickEvent no longer extends NationPreTownLeaveEvent.
  - Alter the explosion damage protection to only stop damage to the config's protection.mob_types.
    - Players will once again take explosion damage as they used to. 
  - Add protection for double chests being created when straddling plot boundaries.
    - Closes #4610.
  - Add /n list by public & /t list by public
    - Closes #4628.
  - New permission nodes:
    - towny.command.town.list.public
      - child node of towny.command.town.list.*
    - towny.command.nation.list.public
      - child node of towny.command.nation.list.*