@@ -327,13 +327,19 @@ public class TownyFormatter {
 		// ___[ Raccoon City ]___
 		// (PvP) (Open) (Peaceful)
 		out.add(ChatTools.formatTitle(town.getFormattedName()));
-		String subtitle = ((!town.isAdminDisabledPVP()) && ((town.isPVP() || town.getHomeblockWorld().isForcePVP())) ? Translation.of("status_title_pvp") : "");
-		subtitle += (!subtitle.isEmpty() ? " " : "") + (town.isOpen() ? Translation.of("status_title_open") : "");
-		subtitle += (!subtitle.isEmpty() ? " " : "") + (town.isPublic() ? Translation.of("status_public") : "");
-		subtitle += (!subtitle.isEmpty() ? " " : "") + (town.isNeutral() ? Translation.of("status_town_title_peaceful") : "");
-		subtitle += (!subtitle.isEmpty() ? " " : "") + (town.isConquered() ? Translation.of("msg_conquered") : "");
-		if (!subtitle.isEmpty())
-			out.add(ChatTools.formatSubTitle(subtitle));
+		List<String> sub = new ArrayList<>();
+		if (!town.isAdminDisabledPVP() && (town.isPVP() || town.getHomeblockWorld().isForcePVP()))
+			sub.add(Translation.of("status_title_pvp"));
+		if (town.isOpen())
+			sub.add(Translation.of("status_title_open"));
+		if (town.isPublic())
+			sub.add(Translation.of("status_public"));
+		if (town.isNeutral())
+			sub.add(Translation.of("status_town_title_peaceful"));
+		if (town.isConquered())
+			sub.add(Translation.of("msg_conquered"));
+		if (!sub.isEmpty())
+			out.add(ChatTools.formatSubTitle(StringMgmt.join(sub, " ")));
 
 		// Lord: Mayor Quimby
 		// Board: Get your fried chicken
