@@ -48,18 +48,20 @@ public class ChatTools {
 
 	public static String formatTitle(String title) {
 
-		String line = ".oOo._____________________________________________________.oOo.";
+		String line = ".oOo.__________________________________________________.oOo.";
 		int pivot = line.length() / 2;
 		String center = ".[ " + Colors.Yellow + title + Colors.Gold + " ].";
 		String out = Colors.Gold + line.substring(0, Math.max(0, (pivot - center.length() / 2)));
 		out += center + line.substring(pivot + center.length() / 2);
 		return out;
 	}
-	
+	/*
+	 * TODO: Get these ^ v methods using the ChatPaginator to manage the width more reliably.
+	 */
 	public static String formatSubTitle(String title) {
 
-		String line = " .]|[.                                                                       .]|[.";
-		int pivot = (line.length()) / 2;
+		String line = " .]|[.                                                                     .]|[.";
+		int pivot = line.length() / 2;
 		String center = title + Colors.Gold;
 		String out = Colors.Gold + line.substring(0, Math.max(0, (pivot - center.length() / 2)));
 		out += center + line.substring(pivot + center.length() / 2);
