@@ -5622,3 +5622,4 @@ v0.92.0.11:
       - child node of towny.command.town.list.*
     - towny.command.nation.list.public
       - child node of towny.command.nation.list.*
+  - Fix the title bar being a bit too wide for the chat line.
